# name: test_is_json__CHAIN
  <class 'list'> [
    <class 'dict'> {
      'caused_by': <class 'list'> [
      ],
      'exc_info': <class 'dict'> {
        'exc_msg': 'Some BAR error has occurred.',
        'exc_type': "<class 'eris._errors.ErisError'>",
        'exc_value': '
          ErisError::tests.test_eris::test_is_json__CHAIN::129{
            Some BAR error has occurred.
          }
        ',
      },
      'file_name': '/eris/tests/test_eris.py',
      'func_name': 'test_is_json__CHAIN',
      'lineno': 129,
      'module_name': 'tests.test_eris',
      'stack': <class 'list'> [
        '
              err: Err[Any, ErisError] = Err("Some BAR error has occurred.")
  
        ',
      ],
    },
    <class 'dict'> {
      'caused_by': <class 'list'> [
      ],
      'exc_info': <class 'dict'> {
        'exc_msg': 'Something went wrong...',
        'exc_type': "<class 'eris._errors.ErisError'>",
        'exc_value': '
          ErisError::tests.test_eris::test_is_json__CHAIN::130{
            Something went wrong...
          }
        ',
      },
      'file_name': '/eris/tests/test_eris.py',
      'func_name': 'test_is_json__CHAIN',
      'lineno': 130,
      'module_name': 'tests.test_eris',
      'stack': <class 'list'> [
        '
              other_err: Err[Any, ErisError] = Err(ERROR_MSG)
  
        ',
      ],
    },
  ]
---
# name: test_is_json__NO_CAUSE
  <class 'list'> [
    <class 'dict'> {
      'caused_by': <class 'list'> [
      ],
      'exc_info': <class 'dict'> {
        'exc_msg': 'Something went wrong...',
        'exc_type': "<class 'eris._errors.ErisError'>",
        'exc_value': '
          ErisError::tests.test_eris::test_is_json__NO_CAUSE::66{
            Something went wrong...
          }
        ',
      },
      'file_name': '/eris/tests/test_eris.py',
      'func_name': 'test_is_json__NO_CAUSE',
      'lineno': 66,
      'module_name': 'tests.test_eris',
      'stack': <class 'list'> [
        '
              err: Err[Any, ErisError] = Err(ERROR_MSG)
  
        ',
      ],
    },
  ]
---
# name: test_is_json__ONE_CAUSE
  <class 'list'> [
    <class 'dict'> {
      'caused_by': <class 'list'> [
        <class 'tuple'> (
          "<class 'ZeroDivisionError'>",
          "ZeroDivisionError('division by zero')",
          'division by zero',
        ),
      ],
      'exc_info': <class 'dict'> {
        'exc_msg': 'Something went wrong...',
        'exc_type': "<class 'eris._errors.ErisError'>",
        'exc_value': '
          ErisError::tests.test_eris::test_is_json__ONE_CAUSE::80{
            Something went wrong...
          }
        ',
      },
      'file_name': '/eris/tests/test_eris.py',
      'func_name': 'test_is_json__ONE_CAUSE',
      'lineno': 80,
      'module_name': 'tests.test_eris',
      'stack': <class 'list'> [
        '
                  err: Err = Err(ERROR_MSG).chain(zero_div_error)
  
        ',
        '
            File "/eris/tests/test_eris.py", line 77, in test_is_json__ONE_CAUSE
              x = 1 / 0
  
        ',
      ],
    },
  ]
---
# name: test_is_json__TWO_CAUSE
  <class 'list'> [
    <class 'dict'> {
      'caused_by': <class 'list'> [
        <class 'tuple'> (
          "<class 'RuntimeError'>",
          "RuntimeError('Why would we divide by zero?')",
          'Why would we divide by zero?',
        ),
        <class 'tuple'> (
          "<class 'ZeroDivisionError'>",
          "ZeroDivisionError('division by zero')",
          'division by zero',
        ),
      ],
      'exc_info': <class 'dict'> {
        'exc_msg': 'Something went wrong...',
        'exc_type': "<class 'eris._errors.ErisError'>",
        'exc_value': '
          ErisError::tests.test_eris::test_is_json__TWO_CAUSE::98{
            Something went wrong...
          }
        ',
      },
      'file_name': '/eris/tests/test_eris.py',
      'func_name': 'test_is_json__TWO_CAUSE',
      'lineno': 98,
      'module_name': 'tests.test_eris',
      'stack': <class 'list'> [
        '
                      err: Err = Err(ERROR_MSG).chain(rt_error)
  
        ',
        '
            File "/eris/tests/test_eris.py", line 94, in test_is_json__TWO_CAUSE
              raise RuntimeError(
  
        ',
        '
            File "/eris/tests/test_eris.py", line 90, in test_is_json__TWO_CAUSE
              x = 1 / 0
  
        ',
      ],
    },
  ]
---
# name: test_is_json__TWO_CAUSE_AND_RAISE_SELF
  <class 'list'> [
    <class 'dict'> {
      'caused_by': <class 'list'> [
        <class 'tuple'> (
          "<class 'RuntimeError'>",
          "RuntimeError('Why would we divide by zero?')",
          'Why would we divide by zero?',
        ),
        <class 'tuple'> (
          "<class 'ZeroDivisionError'>",
          "ZeroDivisionError('division by zero')",
          'division by zero',
        ),
      ],
      'exc_info': <class 'dict'> {
        'exc_msg': 'Something went wrong...',
        'exc_type': "<class 'eris._errors.ErisError'>",
        'exc_value': '
          ErisError::tests.test_eris::test_is_json__TWO_CAUSE_AND_RAISE_SELF::117{
            Something went wrong...
          }
        ',
      },
      'file_name': '/eris/tests/test_eris.py',
      'func_name': 'test_is_json__TWO_CAUSE_AND_RAISE_SELF',
      'lineno': 117,
      'module_name': 'tests.test_eris',
      'stack': <class 'list'> [
        '
                      error = ErisError(ERROR_MSG)
  
        ',
        '
            File "/eris/tests/test_eris.py", line 113, in test_is_json__TWO_CAUSE_AND_RAISE_SELF
              raise RuntimeError(
  
        ',
        '
            File "/eris/tests/test_eris.py", line 109, in test_is_json__TWO_CAUSE_AND_RAISE_SELF
              x = 1 / 0
  
        ',
      ],
    },
  ]
---
